# RAS-Wireless-Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  SAFETY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
docs/: ACCOMPLISHMENT_ENGINEERING.md  ACCOMPLISHMENT_STAKEHOLDER.md  ARCHITECTURE_SUMMARY.md  DESIGN_MATRIX_FINISH_ORCHESTRATION.md  Deploy_Worker_22203.md  HOW_TO_ADD_PRODUCT.md  HOW_TO_RUN.md  KNOWN_LIMITATIONS.md  LABVIEW_RUNNER.md  MIGRATION_LEGACY_STEPS.md  MIGRATION_STATUS.md  README.md  RELEASE_NOTES_v1.0.0-labview-refactor.md  RELEASE_PROPOSAL.md  Safe_Upgrade_and_Deploy.md
orchestrator/: main.py  sweep_runner.py  workflow_schema.py
router_service/: app.py
scripts/: README_LOCAL.md  bootstrap_22100.ps1  bootstrap_22203_worker.ps1  calibrate_labview.py  capture_templates.py  ci_guard_no_local_wifi.py  debug_router_explore.py  debug_router_page.py  deploy_22100_routerservice.ps1  deploy_and_restart.py  deploy_remote_orchestrator.ps1  deploy_remote_worker.ps1  inspect_labview_window.py  pin_metrics_22100.ps1  pin_metrics_orchestrator.ps1  restart_labview.py  run_24g.py  run_24g_live.py  run_labview_all_bands.py  run_matrix.py  run_profile.py  run_single_step.py  setup_22100_autostart.ps1  setup_22100_network.ps1  setup_orchestrator.ps1  setup_router_service.ps1  setup_worker.ps1  smoke_labview_compat.py  test_e2e_be200_2g.py  test_e2e_be200_all_bands.py  test_e2e_wireless.py  test_router_apply.py  test_router_read.py  validate_profiles.py  verify_config.py
tests/: test_ci_guard.py  test_handoff.py  (+4 more)
worker/: app.py
(+144 files in other folders)
