[project]
name = "ras-wireless-agent"
version = "1.1.0"
description = "End-to-end Wi-Fi throughput testing automation across coordinated machines"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
# Phase 1: catch real bugs only. Expand select list as codebase cleans up.
select = [
    "F",   # pyflakes (undefined names, unused imports, redefinitions)
    "I",   # isort (import order)
]
ignore = [
    "F401",  # unused import (too many in __init__.py and scripts right now)
    "F841",  # unused variable (common in diagnostic scripts)
]

[tool.ruff.lint.per-file-ignores]
"scripts/_archive_local/*" = ["ALL"]
"scripts/diagnostics/*" = ["ALL"]
"scripts/calibration/*" = ["ALL"]
"scripts/dev/*" = ["ALL"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
